# sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMMUNITY.md  CONTRIBUTING.md  INTEGRATION_TESTS_SUMMARY.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-enhanced.yml  ci.yml  codeql.yml  scorecard.yml
adapters/n8n/: README.md  index.ts  package.json
adapters/n8n/credentials/: IdentArkApi.credentials.ts
adapters/n8n/nodes/IdentArk/: IdentArk.node.ts
benchmarks/: README.md  benchmark_sdk_overhead.py
credseal/: __init__.py
credseal/integrations/: __init__.py  crewai.py  gemini.py  langgraph.py
docs/: README.md
docs/adapters/: crewai.md  gemini.md  langchain.md  langgraph.md  llamaindex.md  n8n.md
examples/: crewai_agent.py  gemini_finance_agent.py  gemini_quickstart.py  langchain_agent.py  llamaindex_agent.py  mistral_eu.py  ollama_local.py  openai_quickstart.py  research_agent.py  research_agent_openai.py
identark/: __init__.py  exceptions.py  gateway.py  models.py  pricing.py  validation.py
identark/gateways/: __init__.py  control_plane.py  direct.py
identark/integrations/: __init__.py  crewai.py  gemini.py  langchain.py  langgraph.py  llamaindex.py
identark/testing/: __init__.py  mock_gateway.py
sandcastle/: __init__.py
tests/: conftest.py
tests/integration/: EXAMPLES.md  README.md  __init__.py  conftest.py  mock_server.py  test_concurrency.py  test_contract.py  test_control_plane_flow.py  test_direct_gateway_e2e.py
tests/unit/: test_control_plane.py  test_exceptions.py  test_gateways.py  test_integrations.py  test_integrations_crewai.py  test_integrations_gemini.py  test_integrations_langgraph.py  test_models.py  test_streaming.py  test_validation.py
