[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credseal-sdk"
version = "1.0.0"
description = "The AgentGateway Protocol — secure, scalable AI agent execution infrastructure"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gold Okpa", email = "gold@sandcastlehq.com" }]
keywords = [
    "ai", "agents", "llm", "sandbox", "infrastructure",
    "openai", "anthropic", "mistral", "langchain", "gateway",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
mistral = ["mistralai>=1.0.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0", "mistralai>=1.0.0"]
langchain = [
    "openai>=1.0.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
]
llamaindex = [
    "openai>=1.0.0",
    "llama-index-core>=0.10.0",
]
dev = [
    "credseal-sdk[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "aiofiles>=23.0",
]

[project.urls]
Homepage      = "https://github.com/credseal/sdk"
Documentation = "https://github.com/credseal/sdk#readme"
Repository    = "https://github.com/credseal/sdk"
Issues        = "https://github.com/credseal/sdk/issues"
Changelog     = "https://github.com/credseal/sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["credseal"]

# ── Ruff (linting + formatting) ───────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version    = "3.10"
strict            = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["tests"]
addopts         = "-v --tb=short"
filterwarnings  = ["ignore::DeprecationWarning"]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["credseal"]
omit   = ["credseal/integrations/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "\\.\\.\\.\\s*$",
]
